--- a/booking_app/templates/booking_app/html/index.html
+++ b/booking_app/templates/booking_app/html/index.html
@@ -293,7 +293,7 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Made By <a href="https://www.urbanhiveng.com" data-toggle="tooltip" title="Visit urbanhive">Urbanhive</a></p> 
+  <p>Made By <a href="https://www.linkedin.com/in/mmojekwu-cyril-091141115/" data-toggle="tooltip" title="Visit urbanhive">Mmojekwu Cyril</a></p> 
 </footer>
 
 <script>
