--- a/booking_app/templates/booking_app/html/index.html
+++ b/booking_app/templates/booking_app/html/index.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage">Tourismly</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -64,23 +64,23 @@
         <img src="{% static 'booking_app/images/beautiful_nature_image.jpg'%}" alt="New York" width="100%" height="20%">
         <div class="carousel-caption">
           <h3>New York, USA</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p>
+          <p>The atmosphere is out of this world, it felt like paradise.</p>
         </div>      
       </div>
 
       <div class="item">
-        <img src="{% static 'booking_app/images/beautiful_concert_image.jpg'%}" alt="Chicago" width="100%" height="20%">
+        <img src="{% static 'booking_app/images/african_tourism_image.jpg'%}" alt="Chicago" width="100%" height="20%">
         <div class="carousel-caption">
-          <h3>Amsterdam, </h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
+          <h3>Iran</h3>
+          <p>A day we won't forget in high red rocky mountains.</p>
         </div>      
       </div>
     
       <div class="item">
-        <img src="{% static 'booking_app/images/african_tourism_image.jpg'%}" alt="Los Angeles" width="100%" height="50">
+        <img src="{% static 'booking_app/images/Expedition-cruise-tourists-in-Svalbard.jpg'%}" alt="Los Angeles" width="100%" height="50">
         <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
+          <h3>Switzerland</h3>
+          <p>Even though the weather was freezing, we had the best time playing at Arctic</p>
         </div>      
       </div>
     </div>
@@ -104,7 +104,7 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Mathew</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="{% static 'booking_app/images/person-1.jpg'%}" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
@@ -115,24 +115,24 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Magret</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
         <img src="{% static 'booking_app/images/person-2.jpg'%}" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
-        <p>Drummer</p>
-        <p>Loves drumming</p>
-        <p>Member since 1988</p>
+        <p>Historian</p>
+        <p> She loves telling histories of things we never knew</p>
+        <p>Member since 1999</p>
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Cyril</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
           <img src="{% static 'booking_app/images/person-3.jpg'%}" class="img-circle person"  alt="Random Name" width="255" height="255">
       </a>
       <div id="demo3" class="collapse">
-        <p>Bass player</p>
-        <p>Loves math</p>
+        <p>Geographer</p>
+        <p>He knows his stuff and can guide through even if he's blind folded</p>
         <p>Member since 2005</p>
       </div>
     </div>
@@ -156,7 +156,7 @@
         <div class="thumbnail">
           <img src="{% static 'booking_app/images/paris.jpg'%}"  alt="Paris" width="400" height="300">
           <p><strong>Paris</strong></p>
-          <p>Friday 27 November 2015</p>
+          <p>Friday 27 November 2021</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
       </div>
@@ -164,7 +164,7 @@
         <div class="thumbnail">
           <img src="{% static 'booking_app/images/newyork.jpg'%}" alt="New York" width="400" height="300">
           <p><strong>New York</strong></p>
-          <p>Saturday 28 November 2015</p>
+          <p>Saturday 28 November 2021</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
       </div>
@@ -172,7 +172,7 @@
         <div class="thumbnail">
           <img src="{% static 'booking_app/images/sanfran.jpg'%}" alt="San Francisco" width="400" height="300">
           <p><strong>San Francisco</strong></p>
-          <p>Sunday 29 November 2015</p>
+          <p>Sunday 29 November 2021</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
       </div>
@@ -293,7 +293,7 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Made By <a href="https://www.linkedin.com/in/mmojekwu-cyril-091141115/" data-toggle="tooltip" title="Visit urbanhive">Mmojekwu Cyril</a></p> 
+  <p>Made  By <a href="https://www.linkedin.com/in/mmojekwu-cyril-091141115/" data-toggle="tooltip" title="Visit urbanhive">  Cyril  @ Tourismly</a></p> 
 </footer>
 
 <script>
