--- a/booking_app/templates/booking_app/html/index.html
+++ b/booking_app/templates/booking_app/html/index.html
@@ -100,7 +100,7 @@
 <div id="band" class="container text-center">
   <h3>THE GUIDE</h3>
   <p><em>We love to travel!</em></p>
-  <p>We have created a fictional travel website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>You are in the best place to be to find that vacation you've always dreamt of. Look no futher</p>
   <br>
   <div class="row">
     <div class="col-sm-4">
